# torch-point-ops

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  benchmark_flops.py  cuda_memory_hog.py  fps_benchmark.py  main.py  pyproject.toml  setup.py
.github/workflows/: lint.yml  publish.yml
examples/: README.md  basic_usage.py
scripts/: build_wheel.sh  pre-commit.hook  setup_hooks.sh
tests/: test_chamfer.py  test_emd.py  test_fps.py  test_knn.py
torch_point_ops/: __init__.py
torch_point_ops/chamfer/: __init__.py  chamfer.py
torch_point_ops/chamfer/csrc/: chamfer.cpp
torch_point_ops/chamfer/csrc/cuda/: chamfer.cu
torch_point_ops/emd/: __init__.py  emd.py
torch_point_ops/emd/csrc/: emd.cpp
torch_point_ops/emd/csrc/cuda/: emd.cu
torch_point_ops/fps/: __init__.py  fps.py
torch_point_ops/fps/csrc/: fps.cpp
torch_point_ops/fps/csrc/cuda/: fps.cu  quick_fps.cu
torch_point_ops/knn/: __init__.py  knn.py
torch_point_ops/knn/csrc/: knn.cpp
torch_point_ops/knn/csrc/cuda/: knn.cu
torch_point_ops/knn/csrc/cuda/utils/: dispatch.cuh  mink.cuh
