[project]
name = "torch-point-ops"
version = "0.1.0"
description = "A PyTorch library for point cloud operations, including Chamfer Distance and Earth Mover's Distance (EMD)."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Satyajit Ghana", email = "satyajitghana7@gmail.com" },
]
keywords = ["pytorch", "point-cloud", "chamfer-distance", "earth-movers-distance", "deep-learning", "3d", "computer-vision"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Programming Language :: C++",
]
dependencies = [
    "numpy>=2.3.2",
    "ptpython>=3.0.31",
    "torch>=2.8.0",
]

[project.urls]
"Homepage" = "https://github.com/satyajitghana/torch-point-ops"
"Repository" = "https://github.com/satyajitghana/torch-point-ops"
"Bug Tracker" = "https://github.com/satyajitghana/torch-point-ops/issues"

[tool.uv]
package = false

[build-system]
requires = ["setuptools>=61.0", "torch>=2.7.1"]
build-backend = "setuptools.build_meta"



[dependency-groups]
dev = [
    "auditwheel>=6.4.1",
    "black>=25.1.0",
    "expecttest>=0.3.0",
    "fvcore>=0.1.5.post20221221",
    "ninja>=1.13.0",
    "pandas>=2.3.1",
    "pre-commit>=4.2.0",
    "psutil>=7.0.0",
    "pytest>=8.4.1",
    "ruff>=0.12.3",
]
